# Quantum-safe-messenger

./: DOCKER_DIAGNOSIS.md  FIREBASE_SETUP.md  LICENSE  NOTIFICATION_FIX_GUIDE.md  NOTIFICATION_QUICK_FIX.md  PUSH_NOTIFICATIONS_TESTING.md  README.md
Android App/: .gitignore  FINAL_COMPREHENSIVE_SUMMARY.kt  IMPLEMENTATION_SUMMARY.kt  PHASES_5-7_COMPLETION.kt  build.gradle.kts  build_log.txt  gradle.properties  settings.gradle.kts
Android App/.git_backup_20260416_023743/: index
Android App/.git_backup_20260416_023743/refs/heads/: master
Android App/app/: build.gradle.kts  proguard-rules.pro
Android App/app/src/main/: AndroidManifest.xml
Android App/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android App/app/src/main/cpp/liboqs/include/oqs/: oqsconfig.h
Android App/gradle/: libs.versions.toml
Android App/gradle/wrapper/: gradle-wrapper.properties
Backend/: .dockerignore  .env  .env.example  .gitignore  API_QUICK_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION_DATABASE_FLOW.md  AUTH_DATABASE_QUICK_ANSWER.md  DOCUMENTATION_INDEX.md  Dockerfile  ENDPOINTS.md  YOUR_SPECIFIC_ANSWERS.md  docker-compose.yml  package-lock.json  package.json  scratch.ts  test-supabase-connection.js  test-supabase-connection.mjs
Backend/src/: index.ts
Backend/src/api/controllers/: AuthController.ts  KeyController.ts  SocketController.ts  index.ts  keyController.ts
Backend/src/api/middlewares/: authMiddleware.ts  errorHandler.ts  index.ts  rateLimiter.ts  socketAuthMiddleware.ts
Backend/src/api/routes/: authRoutes.ts  healthRoutes.ts  index.ts  keyRoutes.ts
Backend/src/api/validators/: keyBundleValidator.ts  registerValidator.ts
Backend/src/config/: env.ts  firebase.ts  redis.ts  supabase.ts
Backend/src/models/: KeyBundle.ts  User.ts  message.ts  publicKey.ts
Backend/src/repositories/: KeyRepository.ts  UserRepository.ts  index.ts  publicKeyRepository.ts
Backend/src/services/: MessageService.ts  fcmService.ts  index.ts  keyService.ts  offlineQueueService.ts  socketService.ts
Backend/supabase/migrations/: 003_fcm_tokens.sql  004_soft_delete.sql
(+93 files in other folders)
